tests/snapshots/examples_fixtures/aoc__2025__Day2Part2.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/aoc/2025/Day2Part2.flx
== compile ==
failed (compile)
== diagnostics ==
error[E400]: Missing Ambient Effect

Call to `parse_ranges` requires effect `Console` in this function signature.

  examples/aoc/2025/Day2Part2.flx:159:29
    |
159 |         let parsed_ranges = parse_ranges(path)
    |                             ^^^^^^^^^^^^
    |                             ------------ effectful call occurs here

Hint:
  Add `with Console` to the enclosing function.
== stdout ==
<not executed>
