tests/snapshots/examples_fixtures/aoc__2025__aoc_day10_part1.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/aoc/2025/aoc_day10_part1.flx
== compile ==
failed (compile)
== diagnostics ==
error[E004]: Undefined Variable

I can't find a value named `map`.

  examples/aoc/2025/aoc_day10_part1.flx:162:21
    |
162 | let machine_lines = [trim(line) | line <- lines, trim(line) != ""]
    |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Hint:
  Define it first: let map = ...;


error[E004]: Undefined Variable

I can't find a value named `map`.

  examples/aoc/2025/aoc_day10_part1.flx:163:15
    |
163 | let presses = [machine_min_presses(line) | line <- machine_lines]
    |               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Hint:
  Define it first: let map = ...;


error[E004]: Undefined Variable

I can't find a value named `sum`.

  examples/aoc/2025/aoc_day10_part1.flx:164:7
    |
164 | print(sum(presses))
    |       ^^^

Hint:
  Define it first: let sum = ...;

Found 3 errors.
== stdout ==
<not executed>
