tests/snapshots/examples_fixtures/aoc__2025__aoc_day12_refactored.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/aoc/2025/aoc_day12_refactored.flx
== compile ==
failed (compile)
== diagnostics ==
error[E004]: Undefined Variable

I can't find a value named `fold`.

  examples/aoc/2025/aoc_day12_refactored.flx:17:9
   |
17 |         fold(chars(s), 0, /(acc, c) -> if c == "#" { acc + 1 } else { acc })
   |         ^^^^

Hint:
  Define it first: let fold = ...;


error[E004]: Undefined Variable

I can't find a value named `map`.

  examples/aoc/2025/aoc_day12_refactored.flx:51:46
   |
51 |     tokens |> filter(/t -> trim(t) != "") |> map(/t -> parse_int(t))
   |                                              ^^^

Hint:
  Define it first: let map = ...;


error[E004]: Undefined Variable

I can't find a value named `filter`.

  examples/aoc/2025/aoc_day12_refactored.flx:64:44
   |
64 |         let parts    = split(line, " ") |> filter(/t -> trim(t) != "")
   |                                            ^^^^^^

Hint:
  Define it first: let filter = ...;


error[E004]: Undefined Variable

I can't find a value named `fold`.

  examples/aoc/2025/aoc_day12_refactored.flx:90:5
   |
90 |     fold(areas, 0, /(acc, area) -> {
   |     ^^^^

Hint:
  Define it first: let fold = ...;

Found 4 errors.
== stdout ==
<not executed>
