tests/snapshots/examples_fixtures/aoc__2025__aoc_day1_haskell_style.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/aoc/2025/aoc_day1_haskell_style.flx
== compile ==
failed (compile)
== diagnostics ==
error[E004]: Undefined Variable

I can't find a value named `parse_rotations`.

  examples/aoc/2025/aoc_day1_haskell_style.flx:43:9
   |
43 |         parse_rotations(rest, acc)
   |         ^^^^^^^^^^^^^^^

Hint:
  Define it first: let parse_rotations = ...;

Help:
  Did you mean `parse_rotation`?
== stdout ==
<not executed>
